# nanoengineer

./: .gitignore  Description.plist  Makefile.am  README.md  ac_cppunit.m4  ac_ctypes.m4  ac_freezepython.m4  ac_numarray.m4  ac_numeric.m4  ac_numpy.m4  ac_pil.m4  ac_pyopengl.m4  ac_pyqt.m4  ac_qt4.m4  ac_utils.m4  autoBuild.py  autobuild.pro  bootstrap  configure.ac  debug.py  dot_subversion_config  helper  libaquaterm.1.0.0.dylib  nanorex.icns  nateNotes  setup.py
c/: mol.c  (+10 more)
cad/doc/: DNA_Object_Model.uml  Makefile.am  keyboardshortcuts-mac.htm  keyboardshortcuts.htm  mousecontrols-mac.htm  mousecontrols.htm  profiling-howto.txt  selectionshortcuts-mac.htm  selectionshortcuts.htm
cad/doc/old_doc/: DNA_Object_Model.uml  mmpformat  ne1_packaging_instructions.txt  qa_August2004.xls  radii  schema  setup
cad/partlib/: Makefile.am
cad/partlib/bearings/: Graphitic Thrust Bearing.mmp  Nanotube Bearing.mmp
cad/partlib/bushings/: SiC Bushings 6-fold symmetry.mmp  SiC with 36f bushing and 26f shaft.mmp  SiC with 36f bushing.mmp
cad/partlib/casings/: Embedded Bushing in SiC with Shaft.mmp  SiC Slab Large.mmp
cad/partlib/couplings/: Universal Joint.mmp  turn or joint-1-(hin)-ol048585f.mmp
cad/partlib/fullerenes/: C60.mmp  C70.mmp  C78.mmp  graphene-inductor.mmp  graphene-torus.mmp
cad/partlib/functional groups/: -C=ON (amide).mmp  -CHO (Carbonyl).mmp  -CO (ketone).mmp  -COO- (Ester).mmp  -COOH (carboxyl).mmp  -NH2(Amino).mmp
cad/partlib/gears/: BevelGear.mmp  DifferentialGearBox.mmp  LilGears.mmp  MarkIII[k]_PlanetaryGearBox3.mmp  Planet Gear 2.mmp  PlanetGear1.mmp  Planetary Gear Box 1.mmp  PlanetaryGearBox2.mmp  TwoGears.mmp
cad/partlib/general chemistry/: H2O.mmp  chlorophyll.mmp  hydrogen_peroxide.mmp
cad/partlib/moieties/: BevelGear moiety.mmp  BuckyTubeMoiety.mmp  Differential Gear Case End.mmp  Moiety-Small Bearing Outer Sleeve.mmp  Plan Carr Case.mmp  PlanCarrMoiety.mmp  SSi Shaft.mmp  Sun Gear.mmp  SunGearMoiety.mmp
cad/partlib/nanokids/: nanoBaker-C43H48O2.mmp  nanoChef-C43H42O2.mmp  nanoJester C42H46O2.mmp  nanoKid-C39H42O2.mmp  nanoMonarch-C44H50O2.mmp  nanoPilgrim-C43H48O2.mmp  nanoScholar C44H50O2.mmp
cad/partlib/nanotubes/: DeformedTube.mmp
cad/partlib/neon pump/: Neon Pump.mmp
cad/partlib/others/: 5CarbonRing.mmp  Adamantine.mmp  Dodecahedrane.mmp  DodecahedraneShaft.mmp  EGB.mmp  Fuse2Dodecahedranes.mmp  Hoop.mmp  Lonsdaleite.mmp  SiC-curvedSurface.mmp  StiffShaft.mmp  nE-1 Elements.mmp
cad/partlib/schafmeister/: Schafmeister Rod.mmp  Schafmeister Turn Or Joint.mmp  pip42R5S.mmp  pip42S5R.mmp
cad/partlib/sdn/: HJ.mmp  Hairpin.mmp  J Hairpin.mmp
cad/plugins/DNA/: DNA_Object_Model.uml  Makefile.am
cad/plugins/HDF5_SimResults/: ReadMe.html  ac_cppunit.m4  ac_hdf5.m4  bootstrap  configure.ac
cad/src/: AboutDialog.py  ArrangementMode.py  Assembly_API.py  AtomGenerator.py  AtomGeneratorPropertyManager.py  BoundingBox.py  BreakStrand_Command.py  BreakStrands_Command.py  BreakStrands_PropertyManager.py  BuildAtomsPropertyManager.py  BuildAtoms_Command.py  BuildAtoms_GraphicsMode.py  BuildDna_EditCommand.py  BuildDna_GraphicsMode.py  BuildDna_PropertyManager.py  ChunkProp.py  ChunkPropDialog.py  ChunkPropDialog.ui  CmdMgr_Constants.py  CoNTubGenerator.py  Command.py  CommandManager.py  CommandSequencer.py  CommandToolbar.py  CommandToolbar_Constants.py  Comment.py  CommentProp.py  CookieCtrlPanel.py  CookiePropertyManager.py  CookieShape.py  Csys.py  CylinderChunks.py  DebugMenuMixin.py  DirectionArrow.py  Dna.py  DnaCylinderChunks.py  DnaDuplex.py  DnaDuplexEditController.py  DnaDuplexGenerator.py  DnaDuplexPropertyManager.py  (+395 more)
cad/src/PM/: GroupButtonMixin.py  PM_CheckBox.py  PM_Clipboard.py  PM_ColorChooser.py  PM_ColorComboBox.py  PM_Colors.py  PM_ComboBox.py  PM_Constants.py  PM_CoordinateSpinBoxes.py  PM_Dial.py  PM_Dialog.py  PM_DnaBaseNumberLabelsGroupBox.py  PM_DnaSearchResultTable.py  PM_DockWidget.py  PM_DoubleSpinBox.py  PM_ElementChooser.py  PM_FileChooser.py  PM_FontComboBox.py  PM_GroupBox.py  PM_LabelGrid.py  PM_LabelRow.py  PM_LineEdit.py  PM_ListWidget.py  PM_MessageGroupBox.py  PM_MolecularModelingKit.py  PM_ObjectChooser.py  PM_PAM3_AtomChooser.py  PM_PAM5_AtomChooser.py  PM_PartLib.py  PM_PrefsCheckBoxes.py  PM_PreviewGroupBox.py  PM_PushButton.py  PM_RadioButton.py  PM_RadioButtonList.py  PM_SelectionListWidget.py  PM_Slider.py  PM_SpinBox.py  PM_StackedWidget.py  PM_TableWidget.py  PM_TextEdit.py  (+12 more)
cad/src/commandSequencer/: CommandSequencer.py  builtin_command_loaders.py  command_levels.py
cad/src/commandToolbar/: CommandToolbar.py  CommandToolbar_Constants.py
cad/src/command_support/: Command.py  Command_PropertyManager.py  DnaOrCnt_PropertyManager.py  EditCommand.py  EditCommand_PM.py  EditCommand_StructureList.py  GeneratorBaseClass.py  GeneratorController.py  GraphicsMode.py  GraphicsMode_API.py  JigProp.py  JigPropDialog.py  MotorPropertyManager.py  Motor_EditCommand.py  ParameterDialog.py  baseCommand.py  generator_button_images.py  modes.py
cad/src/dna_model/: AtomChainOrRing.py  BaseIterator.py  BasePair.py  Block.py  ChainAtomMarker.py  DnaAtomMarker.py  DnaChain.py  DnaGroup.py  DnaLadder.py  DnaLadderRailChunk.py  DnaMarker.py  DnaSegment.py  DnaStrand.py  DnaStrandOrSegment.py  WholeChain.py  dna_model_constants.py
cad/src/dna_updater/: delete_bare_atoms.py  dna_updater_atoms.py  dna_updater_chunks.py  dna_updater_commands.py  dna_updater_constants.py  dna_updater_debug.py  dna_updater_find_chains.py  dna_updater_follow_strand.py  dna_updater_globals.py  dna_updater_groups.py  (+9 more)
sim/src/: BUGS  Doxyfile  Makefile  Makefile.am  Makefile.win32  MergingParameterFiles  VQT.py  allocate.c  amber_patterns.c  amber_patterns.h  batchsim.py  bend.py  bending.parms  branch  cube.mmp  debug.h  distutils_compile_options.py  dynamics.c  dynamics.h  findpyrex.py  globals.c  globals.h  glviewer.c  hashtable.c  interpolate.c  jigs.h  makehelp.py  merge.parameters.py  mergemmpxyz.py  minimize.h  minstructure.h  newtables.c  newtables.h  onetest.py  pam5_patterns.c  pam5_patterns.h  part.c  part.h  pattern.c  pattern.h  (+29 more)
(+5630 files in other folders)
