
EXTRA_DIST = keyboardshortcuts.htm mousecontrols.htm

install-exec-hook:
	@echo Copying the UI documentation files...
	mkdir -p $(bindir)/NanoEngineer-$(PACKAGE_VERSION).app/doc
	cp keyboardshortcuts.htm $(bindir)/NanoEngineer-$(PACKAGE_VERSION).app/doc/
	cp mousecontrols.htm $(bindir)/NanoEngineer-$(PACKAGE_VERSION).app/doc/

